Project

General

Profile

Actions

Bug #8823

closed

print: variable 'error' set but not used

Added by Toomas Soome almost 6 years ago. Updated almost 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
2017-11-20
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Debug build error from gcc 6:

    ../common/psm.c: In function 'psm_sym':
    ../common/psm.c:82:8: error: variable 'error' set but not used [-Werror=unused-but-set-variable]
      char *error = "invalid input";
            ^~~~~
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk almost 6 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 1d6eba5f15dcb03614b687ec6ddaa6477b7baa41

commit  1d6eba5f15dcb03614b687ec6ddaa6477b7baa41
Author: Toomas Soome <tsoome@me.com>
Date:   2017-12-13T19:37:28.000Z

    8823 print: variable 'error' set but not used
    Reviewed by: Yuri Pankov <yuripv@gmx.com>
    Reviewed by: Gary Mills <gary_mills@fastmail.fm>
    Reviewed by: ken mays <maybird1776@yahoo.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF