8823 print: variable 'error' set but not used Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Gary Mills <gary_mills@fastmail.fm> Reviewed by: ken mays <maybird1776@yahoo.com> Approved by: Dan McDonald <danmcd@joyent.com>